<resources>
    <string name="app_name">StopWatch</string>
    <string name="init_time" translatable="false">0:00:00:000</string>
    <string name="init_time_sec" translatable="false">0:00:00</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_language">Select:</string>
    <string name="switch_background_act">Stop timer when application on the background</string>
    <string name="lang_ru">Russian</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="button_reset">Reset</string>
    <string name="button_pause">Pause</string>
    <string name="lang_en">English</string>
    <string name="switch_paused_act">Stop timer when application paused</string>
    <string name="swith_milliseconds_act">Do not show milliseconds</string>
    <string name="number_millisec_delta">Millisecond increment: </string>
    <string name="number_millisecond_hint" translatable="false">125</string>
    <string name="button_apply_settings">Apply Settings</string>

    <string name="support_email_subject_hint">Email Subject</string>
    <string name="support_msg_hint">Message</string>
    <string name="support_button_send">Send</string>

    <string name="settings_share">share</string>
    <string name="settings_vote">vote</string>
    <string name="settings_about_author">author</string>
    <string name="settings_support">write to tech support</string>

    <string name="settings_choser_title">Send message via ...</string>


    <string-array name="spiner_select_language">
        <item>@string/lang_en</item>
        <item>@string/lang_ru</item>
    </string-array>

</resources>
