<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".Support">

    <EditText
        android:id="@+id/editTextEmailSubject"
        android:hint="@string/support_email_subject_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailSubject"/>

    <EditText
        android:id="@+id/editTextMSG"
        android:hint="@string/support_msg_hint"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/buttonSupportSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:textColor="@color/colorGreen"
        android:layout_gravity="end"
        android:text="@string/support_button_send" />
</LinearLayout>