<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text="@string/init_time"
        android:textSize="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer">

        <Button
            android:id="@+id/button_start"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:onClick="onClickStartTimer"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:onClick="onClickPauseTimer"
            android:text="@string/button_pause" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:onClick="onClickResetTimer"
            android:text="@string/button_reset" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>